--- a/index.html
+++ b/index.html
@@ -8,11 +8,44 @@
 </head>
 <body>
     <div class="accordion">
-        <div class="container">
-            <div class="label">Accordion</div>
-            <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. </div>
+        <div class="accordion__item">
+          <div class="accordion__header">
+            Заголовок 1
+          </div>
+          <div class="accordion__body">
+            <div class="accordion__content">
+              <a href="#">Пункт 1.1</a>
+              <div class="accordion__item">
+                <div class="accordion__header">
+                  Пункт 1.2
+                </div>
+                <div class="accordion__body">
+                  <div class="accordion__content">
+                    <a href="#">Пункт 1.2.1</a>
+                    <a href="#">Пункт 1.2.2</a>
+                    <div class="accordion__item">
+                      <div class="accordion__header">
+                        Пункт 1.2.3
+                      </div>
+                      <div class="accordion__body">
+                        <div class="accordion__content">
+                          <a href="#">Пункт 1.2.3.1</a>
+                          <a href="#">Пункт 1.2.3.2</a>
+                          <a href="#">Пункт 1.2.3.3</a>
+                        </div>
+                      </div>
+                    </div>
+                    <a href="#">Пункт 1.2.4</a>
+                    <a href="#">Пункт 1.2.5</a>
+                  </div>
+                </div>
+              </div>
+              <a href="#">Пункт 1.3</a>
+            </div>
+          </div>
         </div>
-    </div>
+        ...
+      </div>
     <script src="main.js"></script>
 </body>
 </html>
