--- a/index.html
+++ b/index.html
@@ -7,44 +7,71 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <div class="accordion">
-        <div class="accordion__item">
-          <div class="accordion__header">
-            Заголовок 1
-          </div>
-          <div class="accordion__body">
-            <div class="accordion__content">
-              <a href="#">Пункт 1.1</a>
-              <div class="accordion__item">
-                <div class="accordion__header">
-                  Пункт 1.2
-                </div>
-                <div class="accordion__body">
-                  <div class="accordion__content">
-                    <a href="#">Пункт 1.2.1</a>
-                    <a href="#">Пункт 1.2.2</a>
-                    <div class="accordion__item">
-                      <div class="accordion__header">
-                        Пункт 1.2.3
-                      </div>
-                      <div class="accordion__body">
-                        <div class="accordion__content">
-                          <a href="#">Пункт 1.2.3.1</a>
-                          <a href="#">Пункт 1.2.3.2</a>
-                          <a href="#">Пункт 1.2.3.3</a>
-                        </div>
-                      </div>
-                    </div>
-                    <a href="#">Пункт 1.2.4</a>
-                    <a href="#">Пункт 1.2.5</a>
-                  </div>
-                </div>
-              </div>
-              <a href="#">Пункт 1.3</a>
-            </div>
+    <div class="container">
+        <div class="box">
+          <div class="label">Box One</div>
+          <div class="content">
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse
+              adipisci ex impedit itaque labore. Dolorum tempore ipsum autem
+              molestias corrupti possimus voluptate, quos accusamus esse maiores
+              dolorem qui eaque facilis nemo nulla, amet excepturi laborum eveniet
+              eligendi aperiam nostrum culpa. Possimus architecto saepe quidem
+              quam molestiae! Incidunt deleniti quas dolore temporibus nisi
+              voluptates non dolores excepturi dicta ducimus asperiores quam,
+              neque totam ratione reiciendis consequatur a quasi inventore vero
+              doloribus commodi? Dolorem consequatur laborum blanditiis.
+            </p>
           </div>
         </div>
-        ...
+        <div class="box">
+          <div class="label">Box Two</div>
+          <div class="content">
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse
+              adipisci ex impedit itaque labore. Dolorum tempore ipsum autem
+              molestias corrupti possimus voluptate, quos accusamus esse maiores
+              dolorem qui eaque facilis nemo nulla, amet excepturi laborum eveniet
+              eligendi aperiam nostrum culpa. Possimus architecto saepe quidem
+              quam molestiae! Incidunt deleniti quas dolore temporibus nisi
+              voluptates non dolores excepturi dicta ducimus asperiores quam,
+              neque totam ratione reiciendis consequatur a quasi inventore vero
+              doloribus commodi? Dolorem consequatur laborum blanditiis.
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="label">Box Three</div>
+          <div class="content">
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse
+              adipisci ex impedit itaque labore. Dolorum tempore ipsum autem
+              molestias corrupti possimus voluptate, quos accusamus esse maiores
+              dolorem qui eaque facilis nemo nulla, amet excepturi laborum eveniet
+              eligendi aperiam nostrum culpa. Possimus architecto saepe quidem
+              quam molestiae! Incidunt deleniti quas dolore temporibus nisi
+              voluptates non dolores excepturi dicta ducimus asperiores quam,
+              neque totam ratione reiciendis consequatur a quasi inventore vero
+              doloribus commodi? Dolorem consequatur laborum blanditiis.
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="label">Box Four</div>
+          <div class="content">
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse
+              adipisci ex impedit itaque labore. Dolorum tempore ipsum autem
+              molestias corrupti possimus voluptate, quos accusamus esse maiores
+              dolorem qui eaque facilis nemo nulla, amet excepturi laborum eveniet
+              eligendi aperiam nostrum culpa. Possimus architecto saepe quidem
+              quam molestiae! Incidunt deleniti quas dolore temporibus nisi
+              voluptates non dolores excepturi dicta ducimus asperiores quam,
+              neque totam ratione reiciendis consequatur a quasi inventore vero
+              doloribus commodi? Dolorem consequatur laborum blanditiis.
+            </p>
+          </div>
+        </div>
       </div>
     <script src="main.js"></script>
 </body>
